# game-of-life-stm32

./: .gitignore  Cargo.toml  README.md
src/: main.rs
