[package]
name = "ov7670"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
ssd1306 = "0.7.0"
embedded-hal = "0.2.5"
display-interface = "0.4.1"
display-interface-i2c = "0.4.0"
display-interface-spi = "0.4.1"
embedded-graphics-core = { version = "0.3.2", optional = true }

cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "0.5.6"
nb = "1"
panic-halt = "0.2.0"
cast = { version = "0.2.6", default-features = false }
# Used to load BMP images in various examples
tinybmp = "0.3.1"
embedded-graphics = "0.7.1"
# Used by the noise_i2c examples
rand = { version = "0.8.4", default-features = false, features = [ "small_rng" ] }
stm32f1xx-hal = { version = "0.10.0", features = [ "rt", "stm32f103" ] }

